# target-affinity-ml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dataset_v1.yaml  elasticnet_baseline.yaml  esm_fp_mlp.yaml  fusion.yaml  gnn.yaml  mlp_baseline.yaml  rf_baseline.yaml  xgb_baseline.yaml
scripts/: extract_reference_metrics.py
src/target_affinity_ml/: __init__.py
src/target_affinity_ml/benchmarks/: README.md  __init__.py
src/target_affinity_ml/data/: __init__.py  chembl_fetcher.py  curate.py  protein_sequences.py  splits.py  standardize.py
src/target_affinity_ml/evaluation/: __init__.py  __main__.py  analysis.py  bootstrap.py  metrics.py  multi_seed_analysis.py  run_phase5.py  uncertainty.py
src/target_affinity_ml/features/: __init__.py  descriptors.py  fingerprints.py  molecular_graphs.py  protein_embeddings.py
src/target_affinity_ml/models/: __init__.py  deep_base.py  elasticnet_model.py  esm_fp_mlp_model.py  fusion_model.py  gnn_model.py  mlp_model.py  rf_model.py  xgb_model.py
src/target_affinity_ml/training/: __init__.py  __main__.py  deep_trainer.py  trainer.py  tune.py
src/target_affinity_ml/visualization/: __init__.py  plots.py
tests/integration/: kinase_v1_reference.json  test_kinase_reproducibility.py
tests/unit/: test_deep_models.py  test_features.py  test_metrics.py  test_models.py  test_splits.py  test_standardize.py
