[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "target-affinity-ml"
version = "1.0.0"
description = "Class-agnostic ML benchmarking framework for protein-ligand binding affinity prediction"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua Abbott"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "rdkit>=2023.09",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "chembl_webresource_client>=0.10",
    "tqdm>=4.65",
    "tabulate>=0.9",
]

[project.optional-dependencies]
deep = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "fair-esm>=2.0.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/jmabbott40/target-affinity-ml"
"Used by (frozen)" = "https://github.com/jmabbott40/kinase-affinity-baselines"
"Phase 1 Application" = "https://github.com/jmabbott40/gpcr-aminergic-benchmarks"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that take >30 seconds (integration tests)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
